<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".faq">
    <RelativeLayout
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp">
        <View
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/back_button" />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/back_sign"
            android:contentDescription="@string/go_back_icon"
            android:layout_centerInParent="true" />
    </RelativeLayout>
    <TextView
        android:id="@+id/faqTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faqHeading"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/faqContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faqContent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question1"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/answer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer1"
        android:layout_marginHorizontal="20dp"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/question2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question2"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/answer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer2"
        android:layout_marginHorizontal="20dp"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/question3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question3"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/answer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer3"
        android:layout_marginHorizontal="20dp"
        android:textSize="16sp" />
</LinearLayout>