<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".notifications">
    <LinearLayout
        android:id="@+id/backButtonAndHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp">
        <RelativeLayout
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <View
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/back_button" />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/back_sign"
                android:contentDescription="@string/go_back_icon"
                android:layout_centerInParent="true" />
        </RelativeLayout>
        <TextView
            android:id="@+id/notificationHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="100dp"
            android:text="@string/notificationsHeading"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    <TextView
        android:id="@+id/pushNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pushNotifications"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/reminders_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/reminders_toggle" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/trending_places_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/trending_places" />

    <TextView
        android:id="@+id/emailNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/emailNotifications"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/feedback_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/feedback_toggle" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/support_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/support_toggle" />

    <Button
        android:id="@+id/saveNotifiationPref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/saveNotificationsPref"
        android:layout_marginTop="20dp"/>
</LinearLayout>