<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/login_background"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/transparent_black_square"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:padding="16dp">
        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:padding="20dp"/>
        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:paddingVertical="12dp"/>
        <EditText
            android:id="@+id/usernameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/usernameEdit"
            android:background="@android:color/white"
            android:textSize="16sp"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:inputType="text"/>
        <TextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:paddingVertical="12dp" />
        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/passwordEdit"
            android:background="@android:color/white"
            android:textSize="16sp"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:inputType="textPassword"/>
        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotPassword"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:paddingVertical="12dp"/>
        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/loginButton"
            android:textSize="16sp"
            android:background="@drawable/button_color"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/newUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newUser"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:padding="12dp"/>

    </LinearLayout>



</FrameLayout>