<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">
    <TextView
        android:id="@+id/editProfileTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/editProfile"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        app:srcCompat="@drawable/profile" />
    <TextView
        android:id="@+id/fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/fullName" />
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/emailID" />
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"/>

    <EditText
        android:id="@+id/fullNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:minHeight="48dp"
        android:hint="@string/fullNameEditText"/>
    <RelativeLayout
        android:id="@+id/genderAndDobLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/genderSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/dobEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp"
            android:minHeight="48dp"
            android:hint="@string/dobEditText"
            android:focusable="false"
            android:clickable="true"/>

    </RelativeLayout>
    <EditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:minHeight="48dp"
        android:hint="@string/phoneNumberEditText"/>
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/emailEditText"/>
    <Button
        android:id="@+id/saveEditProfile"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="50dp"
        android:text="@string/saveEditProfile"/>
</LinearLayout>