<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".faq">
    <RelativeLayout
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp">
        <View
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/back_button" />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/back_sign"
            android:contentDescription="@string/go_back_icon"
            android:layout_centerInParent="true" />
    </RelativeLayout>
    <TextView
        android:id="@+id/contactUsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactUsHeading"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/contactUsContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactUsContent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:textSize="16sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/phoneImageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/phoneImageView"
            app:srcCompat="@drawable/phone"/>
        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="10dp"
            android:text="@string/phoneNumber"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/emailImageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/emailImageView"
            app:srcCompat="@drawable/mail"/>
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="10dp"
            android:text="@string/email"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>